kustomize-units/kyverno-policies/generic/components/restart-kyverno-on-minio-tenant-crd/restart-kyverno-on-minio-tenant-crd.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restart-kyverno-on-minio-tenant-crd
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    policies.kyverno.io/title: Restart Kyverno on MinIO Tenant CRD
    policies.kyverno.io/category: Other
    policies.kyverno.io/description: >-
      Trigger a restart of Kyverno pods when MinIO Tenant CRD changes
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: restart-kyverno-on-minio-tenant-crd
    match:
      any:
      - resources:
          kinds:
          - apiextensions.k8s.io/*/CustomResourceDefinition
          names:
          - tenants.minio.min.io
    mutate:
      mutateExistingOnPolicyUpdate: true
      targets:
      - apiVersion: helm.toolkit.fluxcd.io/v2
        kind: HelmRelease
        name: kyverno
        namespace: sylva-system
      patchStrategicMerge:
        spec:
          values:
            admissionController:
              podAnnotations:
                minio-tenant-crd-installed: "True"
            backgroundController:
              podAnnotations:
                minio-tenant-crd-installed: "True"
